ICCV acceptance note

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             document.getElementById('hf-downloads').textContent = 'Error';
           });
       </script>
+      <p>🎉 TerraMind has been accepted at <b>ICCV 2025</b>!</p>
     </div>
   </div>
 </section>
